--- a/Index.html
+++ b/Index.html
@@ -681,8 +681,8 @@ myDog.bark();
             <p class="animate-on-scroll">
                 Download the latest version of the Crimson compiler and start building amazing applications today!
             </p>
-            <a href="#" class="button animate-on-scroll">
-                Download Crimson (v1.0.0)
+            <a href="https://github.com/ModMaker101/crimson/releases/tag/v1-beta" class="button animate-on-scroll">
+                Download Crimson (v1.0.0-beta)
             </a>
         </div>
     </section>
